AUGREL/src/objects/FromServices__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MultiNode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MultiNode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceProvider__c</fullName>
        <label>ServiceProvider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Form Services</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>